--- a/src/main/webapp/pages/admin/security/authorization.xhtml
+++ b/src/main/webapp/pages/admin/security/authorization.xhtml
@@ -16,8 +16,8 @@
             <div class="header-replace">
                 <div class="container-header" >
                     <div class="row lf row-title" >                        
-                        <h3>#{not empty securityHome.username ? messages['common.authorize'] : ''}
-                            #{messages['common.permissions']} #{messages['common.for']}
+                        <h3>#{not empty securityHome.username ? messages['common.associate'] : ''}
+                            #{messages['security.roles']} #{messages['common.for']}
                             #{not empty securityHome.username ? securityHome.username : '' }</h3>     
                     </div>     
                 </div>
@@ -39,19 +39,19 @@
                                 <p:ajax event="change" process="@this" update="@parent" partialSubmit="true"/>
                             </p:selectOneMenu>  
                             #{' '}
-                            <span class="help-inline"><br/>#{messages['common.security.associateto.inlinehelp']} <ocp:message forId="#{name}" /></span>
+                            <span class="help-inline"><br/>#{messages['security.associateto.inlinehelp']} <ocp:message forId="#{name}" /></span>
                         </div>                       
                     </h:panelGroup>                
                 </div>
                 <div style="margin: -47px 0 0 1px">
-                    <p:commandButton id="add" value="#{messages['common.assignto']} #{'Rol'}" 
+                    <p:commandButton id="add" value="#{messages['common.assignto']}"
                                      actionListener="#{securityHome.associateTo()}" styleClass="btn primary offset4" style="margin-top: -40%; "
                                      icon="ui-icon-disk" rendered="true" update="groupTable" process="@this"/>
                 </div>                             
                 <br/><br/>
-                <h3>#{messages['security.assignedgroups']}</h3>
+                <h3>#{messages['security.assignedgroup']}</h3>
                 <div class="admin-actions" >
-                    <p:commandButton id="button-delete" value="#{messages['common.remove.gropoAsignado']}" type="button" styleClass="btn"
+                    <p:commandButton id="button-delete" value="#{messages['security.rolAsignado']}" type="button" styleClass="btn"
                                      onclick="deletedDlg.show();" rendered="true" disabled="#{empty securityHome.groupSelected}" 
                                      ajax="true">                                                                
                     </p:commandButton>                      
