--- a/src/main/webapp/pages/depSalud/turno.xhtml
+++ b/src/main/webapp/pages/depSalud/turno.xhtml
@@ -27,7 +27,8 @@
             </div>      
         </ui:define>
         <ui:define name="content" >
-            <h:form id="form">                
+            <h:form id="form">                      
+                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />  
                 <p:panel id="paneltitle" header="Información del Paciente" styleClass="clearfix">
                     <glue:output id="ced" name="ced" type="text" label="#{messages['profile.dni']}" 
                                  value="#{turnoHome.paciente.cedula}" required="false" execute="@this save" render="ced" styleClass="xLarge" disabled="true"/>
@@ -51,10 +52,10 @@
                     </h:panelGroup>  
                     
                     <h:panelGroup layout="block" class="clearfix" rendered="true">
-                        <label for="nombreServicio" >#{messages['servicioMedico.nombre1']}  </label>
+                        <label for="nombreServicio" >#{messages['servicioMedico.nombre1']} *</label>
                         <div class="input">
                             <p:selectOneMenu id="nombreServicio" value="#{turnoHome.instance.servicio}" effect="fade"  converter="#{omnifaces.SelectItemsConverter}" 
-                                             var="ser" rendered="true" >
+                                             var="ser" rendered="true" required="true">
                                 <f:selectItem  itemLabel = "#{messages['common.choice']}"  itemValue="" />                             
                                 <f:selectItem  itemLabel = "MÉDICO"  itemValue="MÉDICO" /> 
                                 <f:selectItem  itemLabel = "ODONTOLÓGICO"  itemValue="ODONTOLÓGICO" /> 
@@ -70,7 +71,7 @@
                         <label for="motivo" >#{messages['turno.motivo']} </label>
                         <div class="input">                                                         
                             <p:inputTextarea id="motivo" value="#{turnoHome.instance.motivo}"  label="" 
-                                             style="width: 60%; height: 60px;" >
+                                             style="width: 60%; height: 60px;" required="true">
                                 <p:ajax event="blur" update="@parent" partialSubmit="true"/>
                             </p:inputTextarea>                            
                             <h:graphicImage value="#{resource['success.gif']}" rendered="#{not empty turnoHome.instance.motivo}"
@@ -81,9 +82,9 @@
                     <h:panelGroup id="fechaCP" layout="block" styleClass="clearfix">
                         <label for="fechaC" >#{messages['comun.fecha']} #{messages['citaMedica.nombre']}*</label>
                         <div class="input">                                                         
-                            <p:calendar id="fechaC" value="#{turnoHome.instance.fechaCita}"  label="" dir="ltr" showButtonPanel="true" navigator="true"
-                                        disabled="false" pattern="EEE, dd-MMMM-yyyy"  locale="es" disabledWeekends="true" >
-                                <p:ajax event="dateSelect" update="@parent :form:hora :form:save" partialSubmit="true" listener="#{turnoHome.horasDisponibles()}" rendered=":form:hora"/>  
+                            <p:calendar id="fechaC" value="#{turnoHome.fecha}"  label="" dir="ltr" showButtonPanel="true" navigator="true"
+                                        disabled="false" pattern="EEE, dd-MMMM-yyyy"  locale="es" disabledWeekends="true" required="true">
+                                <p:ajax event="dateSelect" update="@parent :form:hora :form:save" partialSubmit="true" rendered=":form:hora"/>  
                             </p:calendar>                                                                                                      
                             <h:graphicImage value="#{resource['success.gif']}" rendered="#{turnoHome.instance.fechaCita ne null}"
                                             styleClass="validation-status" />                                                        
@@ -95,7 +96,7 @@
                         <label for="hora" >#{messages['comun.horaCita']}  </label>
                         <div class="input">
                             <p:selectOneMenu id="hora" value="#{turnoHome.horaD}" effect="fade"  converter="#{omnifaces.SelectItemsConverter}" 
-                                             var="h_" rendered="true" disabled="#{empty turnoHome.instance.fechaCita}">
+                                             var="h_" rendered="true" disabled="#{empty turnoHome.fecha}">
                                 <f:selectItem  itemLabel = "#{messages['common.choice']}"  itemValue="" />                                                             
                                 <f:selectItems value="#{turnoHome.listaHoras}" var="hora_" itemLabel ="#{hora_}"  itemValue="#{hora_}" /> 
                                 <p:ajax event="change" update="@parent" partialSubmit="true" />
