--- a/src/main/webapp/pages/paciente/foto.xhtml
+++ b/src/main/webapp/pages/paciente/foto.xhtml
@@ -24,17 +24,7 @@
             </div>             
         </ui:define>
         <ui:define name="sidebar">
-            <p:panel  header="Panel de Administracion">
-                <h:link value="Datos de Paciente" rendered="#{true}" 
-                        outcome="/pages/paciente/view">
-                    <f:param name="pacienteId" value="#{pacienteHome.pacienteId}"/>
-                </h:link>
-                <br/>
-                <h:link value="Modificar Foto" rendered="#{true}" 
-                        outcome="/pages/paciente/foto">
-                    <f:param name="pacienteId" value="#{pacienteHome.pacienteId}"/>
-                </h:link>
-            </p:panel>
+            <ui:include src="/pages/paciente/sidebar.xhtml"/>
         </ui:define>
         <ui:define name="content">
             <h:form id="form1" >   
