--- a/src/main/webapp/pages/paciente/view.xhtml
+++ b/src/main/webapp/pages/paciente/view.xhtml
@@ -22,23 +22,14 @@
             <div class="header-replace">
                 <div class="container">
                     <div class="row fl row-title" >
-                        <h2>#{pacienteHome.managed? messages['common.edit'] : messages['common.add']} #{pacienteHome.instance.nombres}</h2>   
+                        <h2>#{pacienteHome.managed? messages['common.edit'] : messages['common.add']} 
+                            #{pacienteHome.instance.nombres} #{pacienteHome.instance.apellidos}</h2>   
                     </div>
                 </div>
             </div>
         </ui:define>        
         <ui:define name="sidebar">
-            <p:panel  header="Panel de Administracion">
-                <h:link value="Datos de Paciente" rendered="#{true}" 
-                                outcome="/pages/paciente/view">
-                    <f:param name="pacienteId" value="#{pacienteHome.pacienteId}"/>
-                </h:link>
-                <br/>
-                <h:link value="Modificar Foto" rendered="#{true}" 
-                                outcome="/pages/paciente/foto">
-                    <f:param name="pacienteId" value="#{pacienteHome.pacienteId}"/>
-                </h:link>
-            </p:panel>
+            <ui:include src="/pages/paciente/sidebar.xhtml"/>
         </ui:define>
         <ui:define name="content" >
             <h:form id="form">
